# dnote-rs

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
libs/dnote/: Cargo.toml
libs/dnote-infra/: Cargo.toml
libs/dnote-infra/src/repositories/: mod.rs  sql_books.rs
libs/dnote/src/: error.rs  lib.rs
libs/dnote/src/entities/: book.rs
libs/dnote/src/repositories/: books.rs  mod.rs
libs/dnote/src/use_cases/: adding_note.rs  mod.rs
libs/dnote/src/value_objects/: book_name.rs  mod.rs  unique_id.rs
