[package]
name = "dnoter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["cargo"] }
dnote = { version = "0.1.0", path = "../libs/dnote" }
env_logger = "0.9.1"
eyre = "0.6.8"
log = "0.4.17"
